--- a/Clase 01/Homework.ipynb
+++ b/Clase 01/Homework.ipynb
@@ -4,7 +4,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Práctica Clase 1"
+    "# Práctica Clase 1"
    ]
   },
   {
