--- a/Clase 02/Homework.ipynb
+++ b/Clase 02/Homework.ipynb
@@ -4,27 +4,138 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Práctica Clase 1"
+    "# Práctica Clase 2"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "1) Crear una función capaz de convertir números enteros de una base a otra. Debe recibir como parámetro el número a convertir, la base inicial y la base destino"
+    "1) Abrir el archivo \"Emisiones_CO2.csv\" y cargar sus datos en un diccionario."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "archivo = open('Emisiones_CO2.csv', 'r')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicc_emisiones = {  'cod_pais' : [],\n",
+    "                    'nom_pais' : [],\n",
+    "                    'region' : [],\n",
+    "                    'anio' : [],\n",
+    "                    'co2' : [],\n",
+    "                    'co2_percapita' : []}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primera = True\n",
+    "for linea in archivo:\n",
+    "    if (primera):\n",
+    "        primera = False\n",
+    "    else:\n",
+    "        linea = linea.split(sep='|')\n",
+    "        dicc_emisiones['cod_pais'].append(linea[0])\n",
+    "        dicc_emisiones['nom_pais'].append(linea[1])\n",
+    "        dicc_emisiones['region'].append(linea[2])\n",
+    "        dicc_emisiones['anio'].append(linea[3])\n",
+    "        dicc_emisiones['co2'].append(linea[4])\n",
+    "        dicc_emisiones['co2_percapita'].append(linea[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archivo.close()"
    ]
   },
   {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "2) Convertir de decimal a binario las fracciones 1/2, 1/3, 1/4, 1/5, 1/6, 1/7, 1/8, 1/9. Luego analizar los resultados y observar qué particularidad se encuentra en los mismos. Se puede usar Python o una calculadora, lo importante es ver si hay algo que podemos notar..."
+    "2) a) ¿Cuántas variables hay? <br>\n",
+    "b) ¿Qué tipos de datos usar para cada una? <br>\n",
+    "c) ¿Qué tipo de variables son? <br>\n",
+    "d) ¿Hay valores faltantes? <br>\n",
+    "e) ¿Cuál es el total de emisiones de CO2 para 'América Latina y Caribe' en el año 2010?"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "3) Generar una función que reciba como parámetro un diccionario, cuyas listas de valores tienen el mismo tamaño y sus elementos enésimos están asociados. Y otros dos parámetros que indican la clave por la cual debe ordenarse y si es descendente o ascendente.\n",
+    "La función debe devolver el diccionario ordenado, teniendo en cuenta de no perder la relación entre los elementos enésimos.\n",
+    "Recibe tres argumentos:\n",
+    "        diccionario:    Diccionario a ordenar.\n",
+    "        clave:          Clave del diccionario recibido, por la cual ordenar.\n",
+    "        descendente:    Un valor booleano, que al ser falso indica ordenamiento descendente y \n",
+    "                        ascendente si es verdadero. \n",
+    "                        Debe tratarse de un parámetro por defecto en True.\n",
+    "Si el parámetro diccionario no es un tipo de dato diccionario ó el parámetro clave no se encuentra dentro de las claves del diccionario, debe devolver nulo.\n",
+    "    Ej:\n",
+    "        dicc = {'clave1':['c','a','b'],\n",
+    "                'clave2':['casa','auto','barco'],\n",
+    "                'clave3':[3,1,2]}\n",
+    "        OrdenarDiccionario(dicc, 'clave1')          debe retornar {'clave1':['a','b','c'],\n",
+    "                                                                'clave2':['auto','barco','casa'],\n",
+    "                                                                'clave3':[1,2,3]}\n",
+    "        OrdenarDiccionario(dicc, 'clave3', False)   debe retornar {'clave1':['c','b','a'],\n",
+    "                                                                'clave2':['casa','barco','auto'],\n",
+    "                                                                'clave3':[3,2,1]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Diccionario para usar de ejemplo:\n",
+    "dicc = {'color':['gris','negra','celeste'],\n",
+    "                'tipo':['auto','moto','barco'],\n",
+    "                'numero':[1,2,3]}"
    ]
   }
  ],
  "metadata": {
+  "interpreter": {
+   "hash": "c85384e4cb51c8b72350f3a8712cc8351fdc3955e32a27f9b60c6242ab125f01"
+  },
+  "kernelspec": {
+   "display_name": "Python 3.9.7 ('henry')",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.7"
   },
   "orig_nbformat": 4
  },
