--- a/Clase 05/Homework_05.ipynb
+++ b/Clase 05/Homework_05.ipynb
@@ -6,6 +6,27 @@
    "source": [
     "# Práctica Clase 5"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "1) Implementar un juego, que consista en apilar números enteros del 1 al 10, de forma aleatoria, para lo cual debe usarse una estructura de Pila. \n",
+    "Luego, el usuario debe elegir un número de veces en que se va a quitar elementos de la pila, los cuales, sumados entre sí, no deben superar el valor de 30.\n",
+    "El usuario pierde si la suma supera ese valor. Si no lo supera, gana, pero su calificación será 10 menos el número elementos que falten quitar para todavía estar debajo de 30.\n",
+    "El programa debe informar si perdió, y si ganó, con qué calificación.\n",
+    "\n",
+    "Consideraciones:<br>\n",
+    "a. Se puede usar la función input() para obtener una entrada de teclado.<br>\n",
+    "b. Se puede usar la función rand() para obtener valores aleatorios."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
