--- a/Clase 02/Homework Resuelto.ipynb
+++ b/Clase 02/Homework Resuelto.ipynb
@@ -39,6 +39,35 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "primera = True\n",
+    "for linea in archivo:\n",
+    "    if (primera):\n",
+    "        primera = False\n",
+    "    else:\n",
+    "        linea = linea.split(sep='|')\n",
+    "        dicc_emisiones['cod_pais'].append(linea[0])\n",
+    "        dicc_emisiones['nom_pais'].append(linea[1])\n",
+    "        dicc_emisiones['region'].append(linea[2])\n",
+    "        dicc_emisiones['anio'].append(linea[3])\n",
+    "        dicc_emisiones['co2'].append(linea[4])\n",
+    "        dicc_emisiones['co2_percapita'].append(linea[5])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "archivo.close()"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -54,15 +83,15 @@
    "metadata": {},
    "source": [
     "3) Generar una función que reciba como parámetro un diccionario, cuyas listas de valores tienen el mismo tamaño y sus elementos enésimos están asociados. Y otros dos parámetros que indican la clave por la cual debe ordenarse y si es descendente o ascendente.\n",
-    "La función debe devolver el diccionario ordenado, teniendo en cuenta de no perder la relación entre los elementos enésimos.<br>\n",
-    "Recibe tres argumentos:<br>\n",
-    "        diccionario:    Diccionario a ordenar.<br>\n",
-    "        clave:          Clave del diccionario recibido, por la cual ordenar.<br>\n",
+    "La función debe devolver el diccionario ordenado, teniendo en cuenta de no perder la relación entre los elementos enésimos.\n",
+    "Recibe tres argumentos:\n",
+    "        diccionario:    Diccionario a ordenar.\n",
+    "        clave:          Clave del diccionario recibido, por la cual ordenar.\n",
     "        descendente:    Un valor booleano, que al ser falso indica ordenamiento descendente y \n",
     "                        ascendente si es verdadero. \n",
-    "                        Debe tratarse de un parámetro por defecto en True.<br>\n",
-    "Si el parámetro diccionario no es un tipo de dato diccionario ó el parámetro clave no se encuentra dentro de las claves del diccionario, debe devolver nulo.<br>\n",
-    "    Ej:<br>\n",
+    "                        Debe tratarse de un parámetro por defecto en True.\n",
+    "Si el parámetro diccionario no es un tipo de dato diccionario ó el parámetro clave no se encuentra dentro de las claves del diccionario, debe devolver nulo.\n",
+    "    Ej:\n",
     "        dicc = {'clave1':['c','a','b'],\n",
     "                'clave2':['casa','auto','barco'],\n",
     "                'clave3':[3,1,2]}\n",
