--- a/Clase 01/Homework.ipynb
+++ b/Clase 01/Homework.ipynb
@@ -29,31 +29,8 @@
     "    representación binaria. Debe recibir y devolver un valor de tipo entero.\n",
     "    En caso de que el parámetro no sea de tipo entero y mayor a -1 retorna nulo.\n",
     "    '''\n",
-    "    if (type(numero)!=int):\n",
-    "        return None\n",
-    "    if (numero < 0):\n",
-    "        return None\n",
-    "    base = 2\n",
-    "    lista_base = [1]\n",
-    "    lista_activos = [0]\n",
-    "    while(base <= numero):\n",
-    "        lista_base.append(base)\n",
-    "        lista_activos.append(0)\n",
-    "        base = base * 2\n",
-    "    i = len(lista_base) - 1\n",
-    "    numero_binario = 0\n",
-    "    while(i >= 0):\n",
-    "        if (numero_binario + lista_base[i] <= numero):\n",
-    "            numero_binario += lista_base[i]\n",
-    "            lista_activos[i]=1\n",
-    "        i-=1\n",
-    "\n",
-    "    i = len(lista_base) - 1\n",
-    "    numero_binario_final = ''\n",
-    "    while(i >= 0):\n",
-    "        numero_binario_final = numero_binario_final + str(lista_activos[i])\n",
-    "        i-=1\n",
-    "    return int(numero_binario_final)\n"
+    "    \n",
+    "    return None\n"
    ]
   },
   {
@@ -73,6 +50,7 @@
     }
    ],
    "source": [
+    "#Ejemplo:\n",
     "NumeroBinario(29)"
    ]
   },
@@ -87,56 +65,15 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "Método de la multiplicación sucesiva por 2:"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 38,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "def NumeroBinarioFraccionario(fraccion):\n",
-    "    div_resto = -1\n",
-    "    div_entera = -1\n",
-    "    fraccion_aux = fraccion\n",
-    "    decimales = 0\n",
-    "    numero_binario = ''\n",
-    "    while ((div_resto != 0) and (decimales < 20)):\n",
-    "        decimales+=1\n",
-    "        fraccion_aux *= 2\n",
-    "        div_resto = fraccion_aux % 1\n",
-    "        div_entera = fraccion_aux // 1\n",
-    "        numero_binario = numero_binario + str(int(div_entera))\n",
-    "\n",
-    "    numero_binario = '0.' + numero_binario\n",
-    "    return numero_binario"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 39,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Fraccion 1 / 2 en decimal: 0.5 y en binario: 0.1\n",
-      "Fraccion 1 / 3 en decimal: 0.3333333333333333 y en binario: 0.01251021428517034168213652730546110922218454369087381174762349525\n",
-      "Fraccion 1 / 4 en decimal: 0.25 y en binario: 0.01\n",
-      "Fraccion 1 / 5 en decimal: 0.2 y en binario: 0.00136122551102204409819163832766553131072621452428104857209715\n",
-      "Fraccion 1 / 6 en decimal: 0.16666666666666666 y en binario: 0.001251021428517034168213652730546110922218454369087381174762\n",
-      "Fraccion 1 / 7 en decimal: 0.14285714285714285 y en binario: 0.0012491836731462925851170234046819362187243744974898149796\n",
-      "Fraccion 1 / 8 en decimal: 0.125 y en binario: 0.001\n",
-      "Fraccion 1 / 9 en decimal: 0.1111111111111111 y en binario: 0.000137142856113227455910182036407281145632912758254116508\n"
-     ]
-    }
-   ],
-   "source": [
-    "for i in range(2,10):\n",
-    "    valor = NumeroBinarioFraccionario(1/i)\n",
-    "    print('Fraccion 1 /', i,'en decimal:',str(1/i), 'y en binario:',valor)"
+    "Salida esperada:\n",
+    "* Fraccion 1 / 2 :  0.5  y En binario:  0.1\n",
+    "* Fraccion 1 / 3 :  0.3333333333333333  y En binario:  0.010101010101010101010101\n",
+    "* Fraccion 1 / 4 :  0.25  y En binario:  0.01\n",
+    "* Fraccion 1 / 5 :  0.2  y En binario:  0.001100110011001100110011\n",
+    "* Fraccion 1 / 6 :  0.16666666666666666  y En binario:  0.001010101010101010101010\n",
+    "* Fraccion 1 / 7 :  0.14285714285714285  y En binario:  0.001001001001001001001001\n",
+    "* Fraccion 1 / 8 :  0.125  y En binario:  0.001\n",
+    "* Fraccion 1 / 9 :  0.1111111111111111  y En binario:  0.000111000111000111000111"
    ]
   }
  ],
