--- a/Clase 02/Homework Resuelto.ipynb
+++ b/Clase 02/Homework Resuelto.ipynb
@@ -16,17 +16,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 92,
    "metadata": {},
    "outputs": [],
    "source": [
     "import os\n",
-    "archivo = open('Emisiones_CO2.csv', 'r')"
+    "archivo = open('Emisiones_CO2.csv', 'r', encoding='utf-8')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 93,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -40,27 +40,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 94,
    "metadata": {},
    "outputs": [],
    "source": [
-    "primera = True\n",
+    "encabezado = True\n",
     "for linea in archivo:\n",
-    "    if (primera):\n",
-    "        primera = False\n",
+    "    if (not encabezado):\n",
+    "        campos = linea.split(sep='|')\n",
+    "        dicc_emisiones['cod_pais'].append(campos[0])\n",
+    "        dicc_emisiones['nom_pais'].append(campos[1])\n",
+    "        dicc_emisiones['region'].append(campos[2])\n",
+    "        dicc_emisiones['anio'].append(campos[3])\n",
+    "        dicc_emisiones['co2'].append(campos[4])\n",
+    "        dicc_emisiones['co2_percapita'].append(campos[5])\n",
     "    else:\n",
-    "        linea = linea.split(sep='|')\n",
-    "        dicc_emisiones['cod_pais'].append(linea[0])\n",
-    "        dicc_emisiones['nom_pais'].append(linea[1])\n",
-    "        dicc_emisiones['region'].append(linea[2])\n",
-    "        dicc_emisiones['anio'].append(linea[3])\n",
-    "        dicc_emisiones['co2'].append(linea[4])\n",
-    "        dicc_emisiones['co2_percapita'].append(linea[5])"
+    "        encabezado = False"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 95,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -76,6 +76,95 @@
     "c) ¿Qué tipo de variables son? <br>\n",
     "d) ¿Hay valores faltantes? <br>\n",
     "e) ¿Cuál es el total de emisiones de CO2 para 'América Latina y Caribe' en el año 2010?"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 96,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "100\n",
+      "AND\n",
+      "Andorra\n",
+      "Europa y Asia Central\n",
+      "2008\n",
+      "539,049\n",
+      "6,296124556\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "i = 100\n",
+    "print(i)\n",
+    "print(dicc_emisiones['cod_pais'][i])\n",
+    "print(dicc_emisiones['nom_pais'][i])\n",
+    "print(dicc_emisiones['region'][i])\n",
+    "print(dicc_emisiones['anio'][i])\n",
+    "print(dicc_emisiones['co2'][i])\n",
+    "print(dicc_emisiones['co2_percapita'][i])"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 97,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for indice, elemento in enumerate(dicc_emisiones['co2']):\n",
+    "    elemento = elemento.replace('.','')\n",
+    "    elemento = elemento.replace(',','.')\n",
+    "    if (elemento != ''):\n",
+    "        elemento = float(elemento)\n",
+    "    else:\n",
+    "        elemento = None\n",
+    "    dicc_emisiones['co2'][indice] = elemento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 98,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for indice, elemento in enumerate(dicc_emisiones['co2_percapita']):\n",
+    "    elemento = elemento.replace('\\n','')\n",
+    "    elemento = elemento.replace('.','')\n",
+    "    elemento = elemento.replace(',','.')\n",
+    "    if (elemento != ''):\n",
+    "        elemento = float(elemento)\n",
+    "    else:\n",
+    "        elemento = None\n",
+    "    dicc_emisiones['co2_percapita'][indice] = elemento"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Las emisiones en América Latina y Caribe en 2010 fueron de 1691634.8009999995 kt\n"
+     ]
+    }
+   ],
+   "source": [
+    "filtro_region = 'América Latina y Caribe'\n",
+    "filtro_anio = '2010'\n",
+    "emisiones = 0\n",
+    "for indice, elemento in enumerate(dicc_emisiones['region']):\n",
+    "    if (dicc_emisiones['region'][indice] == filtro_region):\n",
+    "        if (dicc_emisiones['anio'][indice] == filtro_anio):\n",
+    "            if (dicc_emisiones['co2'][indice] != None):\n",
+    "                emisiones += dicc_emisiones['co2'][indice]\n",
+    "print('Las emisiones en', filtro_region, 'en', filtro_anio, 'fueron de',emisiones,'kt')"
    ]
   },
   {
@@ -105,14 +194,98 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 121,
    "metadata": {},
    "outputs": [],
    "source": [
     "# Diccionario para usar de ejemplo:\n",
     "dicc = {'color':['gris','negra','celeste'],\n",
-    "                'tipo':['auto','moto','barco'],\n",
-    "                'numero':[1,2,3]}"
+    "            'tipo':['auto','moto','barco'],\n",
+    "            'numero':[1,2,3]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 126,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OrdernarDiccionario(diccionario, clave, ascendente=True):\n",
+    "    aux = 0\n",
+    "    tope = len(diccionario[clave]) - 1\n",
+    "    ind1 = 0\n",
+    "    ind2 = 0\n",
+    "    campos_dicc = diccionario.keys()\n",
+    "    while(ind1 < tope):\n",
+    "        while (ind2 < tope):\n",
+    "            if (diccionario[clave][ind2] > diccionario[clave][ind2+1]):\n",
+    "                for campo in campos_dicc:\n",
+    "                    aux = diccionario[campo][ind2]\n",
+    "                    diccionario[campo][ind2] = diccionario[campo][ind2+1]\n",
+    "                    diccionario[campo][ind2+1] = aux\n",
+    "            ind2+=1\n",
+    "        ind1+=1\n",
+    "        ind2 = ind1\n",
+    "    return diccionario\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 161,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def OrdenarDiccionario( dicc, clave, ascendente=True):\n",
+    "    tope = len(dicc[clave])\n",
+    "    for i in range(tope):\n",
+    "        for j in range(tope - 1):\n",
+    "            if dicc[clave][j] > dicc[clave][j+1]:\n",
+    "                for campo in dicc:\n",
+    "                    dicc[campo][j], dicc[campo][j+1] = dicc[campo][j+1], dicc[campo][j]\n",
+    "    return dicc\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 151,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Diccionario para usar de ejemplo:\n",
+    "dicc = {'color':['gris','negra','celeste'],\n",
+    "            'tipo':['auto','moto','barco'],\n",
+    "            'numero':[1,2,3]}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 158,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "dicc = OrdernarDiccionario(dicc, 'color')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 159,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'color': ['celeste', 'gris', 'negra'],\n",
+       " 'tipo': ['barco', 'auto', 'moto'],\n",
+       " 'numero': [3, 1, 2]}"
+      ]
+     },
+     "execution_count": 159,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dicc"
    ]
   }
  ],
