--- a/Clase 04/Homework_04_3.ipynb
+++ b/Clase 04/Homework_04_3.ipynb
@@ -643,7 +643,7 @@
     }
    ],
    "source": [
-    "titanic = pd.read_csv('../DataSets/Titanic.csv',delimiter = ',',encoding = \"utf-8\")\n",
+    "titanic = pd.read_csv('Titanic.csv',delimiter = ',',encoding = \"utf-8\")\n",
     "titanic.head(30)"
    ]
   },
